Bug 1134841 - Hold ServiceWorker alive during install event's waitUntil(). r=bz, a=lizzard